@@ -17,8 +17,6 @@
 
 package org.apache.solr.common.cloud;
 
-import static org.apache.solr.common.cloud.ZkStateReader.COLLECTION_DEF;
-
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.Arrays;
@@ -28,7 +26,6 @@ import java.util.List;
 import java.util.Map;
 import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.SolrException;
-import org.apache.solr.common.params.CollectionAdminParams;
 import org.apache.solr.common.util.Utils;
 import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
@@ -98,7 +95,7 @@ public class ClusterProperties {
       Map<String, Object> properties =
           (Map<String, Object>)
               Utils.fromJSON(client.getData(ZkStateReader.CLUSTER_PROPS, null, new Stat(), true));
-      return convertCollectionDefaultsToNestedFormat(properties);
+      return properties;
     } catch (KeeperException.NoNodeException e) {
       return Collections.emptyMap();
     } catch (KeeperException | InterruptedException e) {
@@ -111,13 +108,10 @@ public class ClusterProperties {
     client.atomicUpdate(
         ZkStateReader.CLUSTER_PROPS,
         zkData -> {
-          if (zkData == null)
-            return Utils.toJSON(convertCollectionDefaultsToNestedFormat(properties));
+          if (zkData == null) return Utils.toJSON(properties);
           @SuppressWarnings({"unchecked"})
           Map<String, Object> zkJson = (Map<String, Object>) Utils.fromJSON(zkData);
-          zkJson = convertCollectionDefaultsToNestedFormat(zkJson);
-          boolean modified =
-              Utils.mergeJson(zkJson, convertCollectionDefaultsToNestedFormat(properties));
+          boolean modified = Utils.mergeJson(zkJson, properties);
           return modified ? Utils.toJSON(zkJson) : null;
         });
   }
@@ -143,43 +137,6 @@ public class ClusterProperties {
           Utils.setObjectByPath(zkJson, Arrays.asList(path), obj);
           return Utils.toJSON(zkJson);
         });
-  }
-
-  /**
-   * See SOLR-12827 for background. We auto convert any "collectionDefaults" keys to
-   * "defaults/collection" format. This method will modify the given map and return the same object.
-   * Remove this method in Solr 9.
-   *
-   * @param properties the properties to be converted
-   * @return the converted map
-   */
-  @SuppressWarnings({"unchecked"})
-  static Map<String, Object> convertCollectionDefaultsToNestedFormat(
-      Map<String, Object> properties) {
-    if (properties.containsKey(COLLECTION_DEF)) {
-      Map<String, Object> values = (Map<String, Object>) properties.remove(COLLECTION_DEF);
-      if (values != null) {
-        properties.putIfAbsent(CollectionAdminParams.DEFAULTS, new LinkedHashMap<>());
-        Map<String, Object> defaults =
-            (Map<String, Object>) properties.get(CollectionAdminParams.DEFAULTS);
-        defaults.compute(
-            CollectionAdminParams.COLLECTION,
-            (k, v) -> {
-              if (v == null) return values;
-              else {
-                ((Map) v).putAll(values);
-                return v;
-              }
-            });
-      } else {
-        // explicitly set to null, so set null in the nested format as well
-        properties.putIfAbsent(CollectionAdminParams.DEFAULTS, new LinkedHashMap<>());
-        Map<String, Object> defaults =
-            (Map<String, Object>) properties.get(CollectionAdminParams.DEFAULTS);
-        defaults.put(CollectionAdminParams.COLLECTION, null);
-      }
-    }
-    return properties;
   }
 
   /**
